--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/zahrat-alnarjis-shop/dist/main.js"></script>
+    <script type="module" src="/zahrat-alnarjis-shop/dist/main.tsx"></script>
   </body>
 </html>
