--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
   </head>
-
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- REMOVE or FIX the next line: -->
+    <!-- <script type="module" src="/src/main.tsx"></script> -->
+    <!-- Vite will inject the correct script during build -->
   </body>
 </html>
